--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mozilla+Headline:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,800;0,900;1,100;1,200;1,300;1,700;1,800;1,900&family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <nav>
@@ -19,7 +19,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a id="login" href="/login">Login</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="/logout">Logout</a></li>
             <li><a href="/register" id="register">Register</a></li>
         </ul>
     </nav>
@@ -27,9 +27,6 @@
     <footer>
         &copy; 2025 MediTask. All rights reserved.
     </footer>
-    <script>
-        type = "text/javascript"
-        src = "{{ url_for('static', filename='index.js') }}"
-    </script>
+    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 </html>
