--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form method="POST" action="/login">
-  <h3 align="center">Login</h3>
-  <div class="mb-3">
-    <label for="email" class="form-label">Email</label>
-    <input type="text" class="form-control" id="email" name="email" placeholder="Enter the email" required>
-  </div>
-  <div class="mb-3">
-    <label for="password" class="form-label">Password</label>
-    <input type="password" class="form-control" id="password" name="password" placeholder="Enter the password" required>
-  </div>
-  <br/>
-  <button type="submit" class="btn btn-primary">Login</button>
-</form>
+<div class="form-container">
+  <form method="POST" action="/login">
+    <h3 class="form-title">Login</h3>
+    <div class="form-group">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="Enter the email" required>
+    </div>
+    <div class="form-group">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="Enter the password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+</div>
 {% endblock %}
